Fix images params and add text-break on show page

--- a/app/javascript/stylesheets/event.scss
+++ b/app/javascript/stylesheets/event.scss
@@ -4,11 +4,6 @@ ul.nav-margin {
 }
 
 // Show page
-img.cover-image {
-  width: 100%;
-}
-
-img.first-img {
-  min-width: 100%;
-  height: auto;
+img.img-cover {
+  margin-bottom: 25px;
 }
